<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/homes"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_modul"
        android:icon="@drawable/book"
        android:title="@string/title_modul" />

    <item
        android:id="@+id/navigation_absen"
        android:title=""
        android:enabled="false" />

    <item
        android:id="@+id/navigation_jadwal"
        android:icon="@drawable/schedule"
        android:title="@string/title_jadwal" />

    <item
        android:id="@+id/navigation_notifikasi"
        android:icon="@drawable/notifs"
        android:title="@string/title_notifikasi" />

</menu>